--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -1,18 +1,22 @@
 scrape:
-	. `pwd`/.env/bin/activate; python3 download.py
-	mv ~/Downloads/todos_cp.zip ./todos_cp.zip
-	unzip todos_cp.zip todos_cp.txt
-	rm -f todos_cp.zip
-	# converter para utf-8 e remover line endings de DOS
-	iconv -f ISO-8859-15 -t utf-8 todos_cp.txt | sed 's/^M//' > todos_cp.csv
-	rm -f todos_cp.txt
-	# adicionar cabeçalho e normalizar com o csvclean
-	cat header.txt todos_cp.csv | csvclean -d ";"
-	mv stdin_out.csv codigos.csv
-	rm -f todos_cp.csv
-	mv -f codigos.csv ../data/codigos_postais.csv
+	# por omissão só descarregamos as da última legislatura, para todas é make scrape-all
+	csvgrep ../data/urls-datasets.csv -c legislatura -m 13 | csvcut -c slug,url-json | tail -n +2 | sed 's/,/ /' > jsonurls.txt
+	make fetch
 
-install:
-	virtualenv .env --python=/usr/bin/python3 --no-site-packages --distribute --prompt=\(scraper-parlamento\)
-	. `pwd`/.env/bin/activate; pip install -r requirements.txt
-
+scrape-all:
+	# por omissão só descarregamos as da última legislatura, para todas é make scrape-all
+	csvcut ../data/urls-datasets.csv -c slug,url-json | tail -n +2 | sed 's/,/ /' > jsonurls.txt
+	make fetch
+fetch:
+	# fazer a lista de URLs a ir buscar a partir da lista que fizemos no urls-datasets.csv
+	cat ../data/urls-datasets.csv | csvgrep -c legislatura -m 13 | csvcut -c slug,url-json | tail -n +2 | sed 's/,/ /' > jsonurls.txt
+	# usar o wget para ir buscar cada um
+	while read -r slug url; do wget $$url --output-document=$$slug-pre.json; done < jsonurls.txt
+	# pós-processar o JSON com o jq
+	for f in *-pre.json; do cat $$f | jq . > `echo $$f | sed 's/-pre//'`; done
+	# apagar ficheiros temporários
+	rm -f *-pre.json
+	rm -f jsonurls.txt
+	# gravar por cima dos antigos
+	for f in *.json; do mv -f $$f ../data; done
+	
